css/main.css
/* ==========================================================================
   Author's custom styles
   ========================================================================== */


#loader {
  position: absolute;
  left: 50%;
  top: 50%;
  z-index: 1;
}

a.company {
  text-decoration: none;
}

a.company:hover {
  text-decoration: underline;
}

a.help {
  text-decoration: none;
}

a.help:hover {
  cursor: help;
}

.clickAble {
  cursor: pointer;
}

ul.socialicons {
    overflow: auto;
    display: inline-flex;
    -webkit-padding-start: 0px;
}
 
ul.socialicons li {
    list-style-type: none;
    float: left;
    padding-top: 2px;
}
 
ul.socialicons li a i, .w3-sidenav a i, span i{
    color: #fff;
    width: 40px;
    height: 40px;
    border-radius: 20px;
    font-size: 20px;
    text-align: center;
    margin-right: 10px;
    padding-top: 22%;
    transition: all 0.2s ease-in-out;
}
.fa-facebook {
    background:#3b5998;
} 
.fa-linkedin {
    background:#007bb6;
}
.fa-twitter {
    background:#00aced;
}
.fa-google-plus {
    background:#dd4b39;
}
.fa-skype{
  background:#00aff0;
}
.fa-pinterest-p{
  background: #bd081c;
}
.fa-github{
  background: #222;
}
ul.socialicons li a i:hover {
    opacity: .7;
    transform: scale(1.1);
}
.fa-share-alt{
  background:#dd4b39;
}
.fa-download{
  background:#dd4b39;
} 
.fa-envelope-o {
  background:#dd4b39;
}

footer{
    text-align: center;
}
          
h3 {
   text-align: center;
}
td a {
  text-decoration: none;
}
.mg-40 {
    margin-left: 40px;
}

#menu + article {
    margin: 100px auto 20px auto;
}

@media only screen and (min-width: 1366px) {
  #menu + article {
    max-width: 85%;
  }
}

@media only screen and (max-width: 500px) {

}

p.speech {
  position: relative;
  width: 200px;
  height: 40px;
  text-align: center;
  line-height: 40px;
  background-color: #fff;

/*  border: 4px solid #666;*/
    border-top-color: rgb(102, 102, 102);
    border-top-style: solid;
    border-top-width: 0px;
    border-right-color: rgb(102, 102, 102);
    border-right-style: solid;
    border-right-width: 0px;
    border-bottom-color: rgb(102, 102, 102);
    border-bottom-style: solid;
    border-bottom-width: 0px;
    border-left-color: rgb(102, 102, 102);
    border-left-style: solid;
    border-left-width: 0px;
    border-image-source: initial;
    border-image-slice: initial;
    border-image-width: initial;
    border-image-outset: initial;
    border-image-repeat: initial;

  -webkit-border-radius: 30px;
  -moz-border-radius: 30px;
  
  /*border-radius: 30px;*/
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px;
  border-bottom-left-radius: 0px;
  
  /*-webkit-box-shadow: 2px 2px 4px #888;
  -moz-box-shadow: 2px 2px 4px #888;
  box-shadow: 2px 2px 4px #888;*/

  font-weight: bolder;
}
p.speech:before {
  content: ' ';
  position: absolute;
  width: 0;
  height: 0;
  left: 53px;
  top: 30px;
  border: 13px solid;
  /*border-color: #666 transparent transparent #666;*/
  border-top-color: transparent;
    border-right-color: black;
    border-bottom-color: transparent;
    border-left-color: transparent;
  margin-left: 120px;
}
p.speech:after {
  content: ' ';
  position: absolute;
  width: 0;
  height: 0;
  left: 53px;
  top: 30px;
  border: 13px solid;
  /*border-color: #666 transparent transparent #666;*/
  border-top-color: #4caf50;
    border-right-color: #4caf50;
    border-bottom-color: transparent;
    border-left-color: transparent;
  margin-left: 120px;
}

th {
  text-transform: uppercase;
  text-align: center;
}

.arrow-up {
  width: 0;
  height: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-bottom: 10px solid white;
  display: inline-block;
  color: white;
}

.arrow-down {
  width: 0;
  height: 0;
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 10px solid white;
  display: inline-block;
  color: white;
}

